[tool.poetry]
name = "IlyaSavitckiy_brain_games"
version = "0.8.4"
description = "Bundle of the Brain Games"
authors = ["Ilya Savitckiy <hex.ilyasavitckiy@gmail.com>"]
repository = "https://github.com/IlyaSavitckiy/python-project-lvl1"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Education",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Education"
]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

